--- a/.github/workflows/update_stand.yml
+++ b/.github/workflows/update_stand.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Build
         working-directory: ./frontend/swap-ui
         run: |
+          cp .env.example .env
           yarn build
 
       - name: Publish to Cloudflare Pages
