--- a/frontend/swap-ui/package.json
+++ b/frontend/swap-ui/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@neonevm/solana-sign": "^0.1.5-a7",
+    "@neonevm/solana-sign": "^0.1.5",
     "@neonevm/token-transfer-core": "^4.4.2",
     "@neonevm/token-transfer-ethers": "^4.4.2",
     "@pythnetwork/client": "^2.22.0",
