Changed panckakeswap deployer

--- a/pancakeswap/.env.example
+++ b/pancakeswap/.env.example
@@ -1,3 +1,5 @@
 DEPLOYER_KEY=
+SOLANA_WALLET=
 NEON_EVM_NODE=https://curve-stand.neontest.xyz/
 NEON_FAUCET=https://curve-stand.neontest.xyz/request_neon
+SOLANA_RPC_NODE=https://curve-stand.neontest.xyz/solana
