--- a/frontend/swap-ui/.env.example
+++ b/frontend/swap-ui/.env.example
@@ -1,5 +1,5 @@
-VITE_SOLANA_URL: "https://api.devnet.solana.com"
-VITE_NEON_CORE_API_RPC_URL: "https://devnet.neonevm.org"
+VITE_SOLANA_URL: "https://curve-stand.neontest.xyz/solana"
+VITE_NEON_CORE_API_RPC_URL: "https://curve-stand.neontest.xyz"
 
 VITE_SOLANA_WALLET:
 VITE_NEON_WALLET:
