--- a/pancakeswap/package.json
+++ b/pancakeswap/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "deploy": "npx hardhat run ./scripts/pancakeswap-demo-setup.js --network curvestand",
     "airdrop": "npx hardhat run ./scripts/mint-tokens.js --network curvestand",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx hardhat run ./scripts/wsol-test.js --network curvestand"
   },
   "author": "maxpolizzo@gmail.com",
   "license": "MIT",
@@ -19,6 +19,7 @@
     "@solana/spl-token": "0.4.9",
     "@solana/web3.js": "^1.98.0",
     "@uniswap/lib": "^4.0.1-alpha",
+    "big.js": "^6.2.2",
     "bs58": "^6.0.0",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
