--- a/frontend/swap-ui/.env.example
+++ b/frontend/swap-ui/.env.example
@@ -1,3 +1,4 @@
+VITE_PROXY_ENV: "devnet"
 VITE_SOLANA_URL: "https://curve-stand.neontest.xyz/solana"
 VITE_NEON_CORE_API_RPC_URL: "https://curve-stand.neontest.xyz"
 
