--- a/frontend/swap-ui/package.json
+++ b/frontend/swap-ui/package.json
@@ -22,6 +22,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.98.0",
+    "big.js": "^6.2.2",
     "bs58": "^6.0.0",
     "ethers": "^6.13.5",
     "react": "^18.3.1",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@tailwindcss/vite": "^4.0.0",
+    "@types/big.js": "^6.2.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-modal": "^3.16.3",
