--- a/pancakeswap/.env.example
+++ b/pancakeswap/.env.example
@@ -1,5 +1,5 @@
 DEPLOYER_KEY=
 SOLANA_WALLET=
-NEON_EVM_NODE=https://curve-stand.neontest.xyz/
-NEON_FAUCET=https://curve-stand.neontest.xyz/request_neon
-SOLANA_RPC_NODE=https://curve-stand.neontest.xyz/solana
+NEON_EVM_NODE=https://devnet.neonevm.org
+NEON_FAUCET=https://api.neonfaucet.org/request_neon
+SOLANA_RPC_NODE=https://api.devnet.solana.com
