Added e2e tests for swap v1-v2 transactions

--- a/frontend/swap-ui/tsconfig.app.json
+++ b/frontend/swap-ui/tsconfig.app.json
@@ -27,5 +27,12 @@
   },
   "include": [
     "src"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "tests/**/*",
+    "**/*spec.ts",
+    "jest.config.ts"
   ]
 }
