--- a/frontend/swap-ui/tsconfig.node.json
+++ b/frontend/swap-ui/tsconfig.node.json
@@ -22,5 +22,12 @@
   },
   "include": [
     "vite.config.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "tests/**/*",
+    "**/*spec.ts",
+    "jest.config.ts"
   ]
 }
