--- a/frontend/swap-ui/.env.example
+++ b/frontend/swap-ui/.env.example
@@ -2,5 +2,5 @@ VITE_PROXY_ENV: devnet
 VITE_SOLANA_URL: https://api.devnet.solana.com
 VITE_NEON_CORE_API_RPC_URL: https://devnet.neonevm.org
 
-VITE_SOLANA_WALLET:
-VITE_NEON_WALLET:
+VITE_SOLANA_WALLET: <your_solana_private_key_in_bs58>
+VITE_NEON_WALLET: <your_neon_private_key>
