--- a/frontend/swap-ui/package.json
+++ b/frontend/swap-ui/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@neonevm/solana-sign": "^0.1.5",
+    "@neonevm/solana-sign": "/Users/able/projects/work/neon/curve/neon-solana-signer/packages/core/neonevm-solana-sign-v0.1.8-a.tgz",
     "@neonevm/token-transfer-core": "^4.4.2",
     "@neonevm/token-transfer-ethers": "^4.4.2",
     "@pythnetwork/client": "^2.22.0",
@@ -50,9 +50,9 @@
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.0",
     "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
-    "tailwindcss": "^4.0.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5",
