--- a/backend/airdrop/package.json
+++ b/backend/airdrop/package.json
@@ -1,7 +1,7 @@
 {
   "name": "neon-solana-airdrop",
   "version": "1.0.0",
-  "description": "",
+  "description": "Service for sharing test tokens",
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
@@ -10,14 +10,20 @@
     "exec": "concurrently \"npx tsc --watch\" \"ts-node -r tsconfig-paths/register src/index.ts\"",
     "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "Neon EVM",
+    "Solana",
+    "Faucet",
+    "Solana airdrop",
+    "Solana signer demo"
+  ],
+  "license": "MIT",
   "dependencies": {
     "@solana/spl-token": "0.4.9",
     "@solana/web3.js": "^1.98.0",
     "big.js": "^6.2.2",
     "bs58": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "express": "^4.21.2",
@@ -31,6 +37,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/big.js": "^6.2.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.8",
