--- a/.github/workflows/backend_build.yaml
+++ b/.github/workflows/backend_build.yaml
@@ -23,7 +23,11 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Set short SHA
-        run: echo "SHORT_SHA=${GITHUB_SHA::8}" >> $GITHUB_ENV
+        run: |
+          branch=${{ github.ref_name }}
+          sha=${GITHUB_SHA::8}
+          run_number=${GITHUB_RUN_NUMBER}
+          echo "BUILD_ID=${branch}-${sha}-${run_number}" >> $GITHUB_ENV
 
       - name: Build and push neon-tracer image
         uses: docker/build-push-action@v5.3.0
@@ -31,5 +35,5 @@ jobs:
           context: backend/airdrop
           push: true
           file: backend/airdrop/Dockerfile
-          tags: neonlabsorg/neon-solana-signature-demo-backend:${{ github.ref_name }}-${{ env.SHORT_SHA }}
-          labels: neonlabsorg/neon-solana-signature-demo-backend:${{ github.ref_name }}-${{ env.SHORT_SHA }}
+          tags: neonlabsorg/neon-solana-signature-demo-backend:${{ env.BUILD_ID }}
+          labels: neonlabsorg/neon-solana-signature-demo-backend:${{ env.BUILD_ID }}
